# knowledge-support-chatbot

./: LICENSE  RAG.py  README.md  backend.py  controller.py  dialogue_engine.py  expected.txt  index.html  main.py  nlg_example.json  nlg_unit.py  nlu_unit.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  state.json  styles.css  user_profile_setup.py
data/fsm/submodule/: task execution.json  task identification.json
data/tasks/: task_list.json
module/: nlg_example.json  states.json  task_list.json
module/submodule/: opening.json  task execution.json
public/: index.html
src/: ActionProvider.js  App.js  config.js
src/core/: dialogue_engine.py  main.py
src/fsm/: goal_clarification.py  task_execution.py  task_identification.py
src/models/: user_profile_setup.py
src/utils/: RAG.py  load_json.py  nlu_unit.py
temp_del/: FSM.py  user_profile_setup.py
test/: FSM.py  dialogue_engine.py  nlg_example.json  nlg_unit.py  nlu_unit.py  state.json  todo.txt  user_profile_setup.py
test/module/: states.json  task_list.json
test/module/submodule/: goal clarification.json  opening.json  task execution.json  task identification.json  task performing.json
test/temp_del/: dialogue_engine.py  states.json  task_import.py  user.py
