[project]
name = "knowledge-support-chatbot"
version = "0.1.0"
description = "A flexible conversational AI assistant that provides step-by-step guidance for product usage"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]